--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,1 +1,32 @@
-<p>menu works!</p>
+<div *ngFor="let restaurantName of menuList">
+    <mat-accordion>
+ 
+        <mat-expansion-panel (opened)="panelOpenState = true"
+                             (closed)="panelOpenState = false">
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+             {{restaurantName.restaurantName}}
+            </mat-panel-title>
+            <mat-panel-description>
+                Address:  {{restaurantName.restaurantAddress}}
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+          <!--  -->
+          <div class="foodList">
+            <mat-card class="example-card" *ngFor="let data of restaurantName.foodItemsList">
+                <mat-card-header>
+                  <mat-card-subtitle>{{data.category}}:{{data.name}}</mat-card-subtitle>
+                </mat-card-header>
+                <img mat-card-image src="../../assets/{{data.name}}.jpg" alt="Photo of a Shiba Inu">
+                <mat-card-actions>
+                  <h2>${{data.price}}</h2>
+                  <button mat-button (click)="addFoodInformation(data)">Add</button>
+                  <button mat-button (click)="orderNow()">Order Now</button>
+
+                </mat-card-actions>
+              </mat-card>
+          </div>
+  <!--  -->
+        </mat-expansion-panel>
+      </mat-accordion>
+</div>
