--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,6 +11,7 @@
           <input matInput type="password" placeholder="Password" formControlName="phoneNumber">
         </mat-form-field>
         <button mat-raised-button color="primary" type="submit">Login</button>
+        <button mat-raised-button color="primary" type="button" (click)="logout()" >Logout</button>
       </form>
     </mat-card-content>
   </mat-card>  
