--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,7 +8,7 @@
           <input matInput placeholder="Username" formControlName="email">
         </mat-form-field>
         <mat-form-field>
-          <input matInput type="password" placeholder="Password" formControlName="phoneNumber">
+          <input matInput type="password" placeholder="Password" formControlName="password">
         </mat-form-field>
         <button mat-raised-button color="primary" type="submit">Login</button>
         <button mat-raised-button color="primary" type="button" (click)="logout()" >Logout</button>
