--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -20,7 +20,7 @@
                 <img mat-card-image src="../../assets/{{data.name}}.jpg" alt="Photo of a Shiba Inu">
                 <mat-card-actions>
                   <h2>${{data.price}}</h2>
-                  <button mat-button (click)="addFoodInformation(data)">Add</button>
+                  <button mat-button (click)=" restaurantDetails(restaurantName); addFoodInformation(data)">Add</button>
                 </mat-card-actions>
               </mat-card>
           </div>
