--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -3,23 +3,53 @@
       <mat-card-title>Login</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <form [formGroup]="registerForm" (ngSubmit)="registerCustomer()">
+      <form [formGroup]="registerForm" #formData="ngForm" (ngSubmit)="registerCustomer()">
         <mat-form-field>
           <input matInput placeholder="Email" formControlName="email">
+          <mat-error *ngIf="registerForm.get('email')?.hasError('required')">Email is required</mat-error>
+          <mat-error *ngIf="registerForm.get('email')?.hasError('email')">Please enter a valid email address</mat-error>
         </mat-form-field>
+        
         <mat-form-field>
           <input matInput type="number" placeholder="Phone Number" formControlName="phoneNumber">
+          <mat-error class="error"  *ngIf="getPhoneNumber?.errors?.['required']">
+            contact number is Required             
+          </mat-error>
+          <mat-error class="error" *ngIf="getPhoneNumber?.errors?.['contactError']">
+            contact must start with 7 or 8 or 9
+          </mat-error> 
+   
         </mat-form-field>
         <mat-form-field>
             <input matInput type="password" placeholder="Password" formControlName="password">
+            <mat-error class="error"  *ngIf="getPassword?.errors?.['required']">
+              Password is Required              
+          </mat-error> 
+          </mat-form-field>
+        <mat-form-field>
+          <input matInput type="password" placeholder="Confirm Password" formControlName="Cpassword">
+          <mat-error class="error"  *ngIf="getCPassword?.errors?.['required']">
+            Confirm Password is Required              
+          </mat-error> 
+          
+          <p class="errorCss" *ngIf="registerForm?.errors?.['PasswordError']">
+              Password and Confirm Password Should Match
+          </p>
+      
         </mat-form-field>
         <mat-form-field>
             <input matInput type="text" placeholder="Name" formControlName="name">
+            <mat-error class="error"  *ngIf="getName?.errors?.['required']">
+              Name is Required              
+            </mat-error> 
           </mat-form-field>
           <mat-form-field>
             <input matInput type="text" placeholder="Address" formControlName="address">
+            <mat-error class="error"  *ngIf="getAddress?.errors?.['required']">
+              Address is Required              
+            </mat-error> 
           </mat-form-field>
-        <button mat-raised-button color="primary" type="submit">Register</button>
+        <button mat-raised-button [disabled]="formData.invalid" color="primary" type="submit">Register</button>
       </form>
     </mat-card-content>
   </mat-card>  
