--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -5,9 +5,9 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="/loginComponent">Login</a>
-      <a mat-list-item href="/register">Register</a>
-      <a mat-list-item href="/menuComponent">Food Menu</a>
+      <a mat-list-item routerLink="/loginComponent">Login</a>
+      <a mat-list-item routerLink="/register">Register</a>
+      <a mat-list-item routerLink="/menuComponent">Food Menu</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
