--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -15,7 +15,7 @@
           <mat-error class="error"  *ngIf="getPhoneNumber?.errors?.['required']">
             contact number is Required             
           </mat-error>
-          <mat-error class="error" *ngIf="getPhoneNumber?.errors?.['contactError']">
+          <mat-error *ngIf="getPhoneNumber?.errors?.['contactError']">
             contact must start with 7 or 8 or 9
           </mat-error> 
    
