--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -15,9 +15,10 @@
           <mat-error class="error"  *ngIf="getPhoneNumber?.errors?.['required']">
             contact number is Required             
           </mat-error>
-          <mat-error *ngIf="getPhoneNumber?.errors?.['contactError']">
-            contact must start with 7 or 8 or 9
-          </mat-error> 
+          <mat-error class="error" *ngIf="getPhoneNumber?.errors?.['contactError']">
+            Phone number must be 10 digits long and start with 7, 8, or 9
+          </mat-error>
+          
    
         </mat-form-field>
         <mat-form-field>
