--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -12,15 +12,10 @@
         
         <mat-form-field>
           <input matInput type="number" placeholder="Phone Number" formControlName="phoneNumber">
-          <mat-error class="error"  *ngIf="getPhoneNumber?.errors?.['required']">
-            contact number is Required             
-          </mat-error>
-          <mat-error class="error" *ngIf="getPhoneNumber?.errors?.['contactError']">
-            Phone number must be 10 digits long and start with 7, 8, or 9
-          </mat-error>
-          
-   
+          <mat-error *ngIf="getPhoneNumber?.hasError('required')">Phone number is required</mat-error>
+          <mat-error *ngIf="getPhoneNumber?.hasError('pattern')">Invalid phone number</mat-error>
         </mat-form-field>
+
         <mat-form-field>
             <input matInput type="password" placeholder="Password" formControlName="password">
             <mat-error class="error"  *ngIf="getPassword?.errors?.['required']">
