--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -7,7 +7,7 @@
         <mat-form-field>
           <input matInput placeholder="Email" formControlName="email">
           <mat-error *ngIf="getEmail?.hasError('required')">Email is required</mat-error>
-          <mat-error *ngIf="getEmail.hasError('pattern')">Please enter a valid email address</mat-error>
+          <mat-error *ngIf="getEmail?.hasError('pattern')">Please enter a valid email address</mat-error>
         </mat-form-field>
         
         <mat-form-field>
