--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,7 +1,39 @@
-mat-card{
+.userInformation{
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 0px;
+  margin-top: 30px;
+  width: 50vw;
+}
+.userInformation mat-card-title{
+  font-family: Libre Baskerville;
+  font-size: 24px;
+}
+
+span{
+  font-family: Bruno Ace;
+  color: #d94621;
+  font-weight: bold;
+  font-size: xx-large;
+}
+
+.userInformation mat-card{
+  margin-top: 2px;
+}
+.userInformationHeader{
+  margin-top: 0px;
+  margin-bottom:0px;
+  padding: 0px;
+}
+
+
+.loginPanel{
     width: 70vw;
     margin-left: 10%;
-    margin-top: 5%;
+    margin-top: 2%;
+    margin-bottom: 5%;
 }
 .example-card {
     max-width: 80%;
@@ -21,4 +53,8 @@ mat-card{
   form{
     display: flex;
     flex-direction: column;
+  }
+
+  button{
+    margin-top: 12px;
   }
