--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,40 @@
-<mat-card>
-    <mat-card-header>
-      <mat-card-title>Login</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <form [formGroup]="loginForm" (ngSubmit)="loginCustomer()">
-        <mat-form-field>
-          <input matInput placeholder="Username" formControlName="email">
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput type="password" placeholder="Password" formControlName="password">
-        </mat-form-field>
-        <button mat-raised-button color="primary" type="submit">Login</button>
-        <button mat-raised-button color="primary" type="button" (click)="logout()" >Logout</button>
-      </form>
-    </mat-card-content>
-  </mat-card>
+<mat-card class="userInformation">
+  <mat-card-header class="userInformationHeader">
+    <mat-card-title>
+      <span>Welcome: </span>
+      {{currentUserName}}</mat-card-title>
+  </mat-card-header>
+  <mat-card-header class="userInformationHeader">
+    <mat-card-title>
+      <span>Email: </span>
+      {{currentUserEmail}}</mat-card-title>
+  </mat-card-header >
+  <mat-card-header class="userInformationHeader" >
+    <mat-card-title>
+      <span>Phone Number: </span>
+      {{currentUserPhoneNumber}}</mat-card-title>
+  </mat-card-header>
+  <mat-card-header class="userInformationHeader">
+    <mat-card-title>
+      <span>Address: </span>
+      {{currentUserAddress}}</mat-card-title>
+  </mat-card-header>
+</mat-card>
+
+<mat-card class="loginPanel">
+  <mat-card-header>
+    <mat-card-title>Login</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <form [formGroup]="loginForm" (ngSubmit)="loginCustomer()">
+      <mat-form-field>
+        <input matInput placeholder="Username" formControlName="email">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="password" placeholder="Password" formControlName="password">
+      </mat-form-field>
+      <button mat-raised-button color="accent" type="submit">Login</button>
+      <button mat-raised-button color="warn" type="button" (click)="logout()" >Logout</button>
+    </form>
+  </mat-card-content>
+</mat-card>
