--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -8,6 +8,7 @@
       <a mat-list-item routerLink="/loginComponent">Login</a>
       <a mat-list-item routerLink="/register">Register</a>
       <a mat-list-item routerLink="/menuComponent">Food Menu</a>
+      <a mat-list-item routerLink="/orderHistory">Order History</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
