--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<mat-card class="userInformation">
+<mat-card *ngIf="loggedIn" class="userInformation">
   <mat-card-header class="userInformationHeader">
     <mat-card-title>
       <span>Welcome: </span>
