--- a/src/app/order-history/order-history.component.html
+++ b/src/app/order-history/order-history.component.html
@@ -6,13 +6,13 @@
       </ng-container>
     
     <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef> Order Id </th>
+      <th mat-header-cell *matHeaderCellDef> Email </th>
       <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
   
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> orderDateAndTime </th>
+      <th mat-header-cell *matHeaderCellDef> Date and time </th>
       <td mat-cell *matCellDef="let element"> {{element.orderDateAndTime}} </td>
     </ng-container>
   
