--- a/src/app/orderpage/orderpage.component.html
+++ b/src/app/orderpage/orderpage.component.html
@@ -11,11 +11,11 @@
         <span>{{ data.category }}</span>
         <span>{{ data.name }}</span>
         <span>{{ data.price }}</span>
-        <input type="number" [(ngModel)]="data.quantity">
+        <input type="number" [(ngModel)]="data.quantity" min="1">
         <span class="food-item-total">{{ total(data) }}</span>
       </div>
       <div class="grandTotal">
-        <button  mat-raised-button color="warn" (click)="placeOrder()"  > <span style="font-size: 16px; 
+        <button  mat-raised-button color="warn"  [disabled]="!checkOrderButton()"  (click)="placeOrder()"  > <span style="font-size: 16px; 
             font-weight: 600;">Place Order=> Grand Total: $</span> {{calculateGrandTotal(finalBill.grandTotal)}}</button>
       </div>
     </mat-card-content>
