--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -5,7 +5,7 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/loginComponent">Login</a>
+      <a class="links" mat-list-item routerLink="/loginComponent">Login</a>
       <a mat-list-item routerLink="/register">Register</a>
       <a mat-list-item routerLink="/menuComponent">Food Menu</a>
       <a mat-list-item routerLink="/orderHistory">Order History</a>
@@ -21,7 +21,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>pizzApp</span>
+      <span>Khana-Khazana</span>
     </mat-toolbar>
     <router-outlet></router-outlet>
     <!-- Add Content Here -->
