--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,14 +26,14 @@
     <mat-card-title>Login</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <form [formGroup]="loginForm" (ngSubmit)="loginCustomer()">
+    <form [formGroup]="loginForm" (ngSubmit)="loginCustomer()" #formData="ngForm">
       <mat-form-field>
         <input matInput placeholder="Username" formControlName="email">
       </mat-form-field>
       <mat-form-field>
         <input matInput type="password" placeholder="Password" formControlName="password">
       </mat-form-field>
-      <button mat-raised-button color="accent" type="submit">Login</button>
+      <button [disabled]="formData.invalid" mat-raised-button color="accent" type="submit">Login</button>
 
     </form>
   </mat-card-content>
