--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -28,7 +28,7 @@
   <mat-card-content>
     <form [formGroup]="loginForm" (ngSubmit)="loginCustomer()" #formData="ngForm">
       <mat-form-field>
-        <input matInput placeholder="Username" formControlName="email">
+        <input matInput placeholder="User Email" formControlName="email">
       </mat-form-field>
       <mat-form-field>
         <input matInput type="password" placeholder="Password" formControlName="password">
