--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -29,6 +29,9 @@
     <form [formGroup]="loginForm" (ngSubmit)="loginCustomer()" #formData="ngForm">
       <mat-form-field>
         <input matInput placeholder="User Email" formControlName="email">
+        <!-- <mat-error *ngIf="loginForm.controls.email.invalid && (loginForm.controls.email.dirty || loginForm.controls.email.touched)">
+          Please enter a valid email address.
+        </mat-error> -->
       </mat-form-field>
       <mat-form-field>
         <input matInput type="password" placeholder="Password" formControlName="password">
