--- a/src/app/orderpage/orderpage.component.html
+++ b/src/app/orderpage/orderpage.component.html
@@ -1,5 +1,8 @@
 <mat-card>
+  <mat-card-content>Note: Minimum Order must be of $100</mat-card-content>
+
     <mat-card-content>
+    
         <div class="food-item-header">
             <span>Category</span>
             <span>Name</span>
