--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -29,12 +29,19 @@
     <form [formGroup]="loginForm" (ngSubmit)="loginCustomer()" #formData="ngForm">
       <mat-form-field>
         <input matInput placeholder="User Email" formControlName="email">
-        <!-- <mat-error *ngIf="loginForm.controls.email.invalid && (loginForm.controls.email.dirty || loginForm.controls.email.touched)">
-          Please enter a valid email address.
-        </mat-error> -->
+   
+
+        <div  *ngIf="loginForm.controls.email.dirty || loginForm.controls.email.touched">
+          <p class="loginFormErrors" *ngIf="loginForm.get('email').hasError('required') ">Email is Required</p>
+          <p class="loginFormErrors" *ngIf="loginForm.get('email').hasError('pattern') ">Invalid pattern</p>
+        </div>
+      
       </mat-form-field>
       <mat-form-field>
         <input matInput type="password" placeholder="Password" formControlName="password">
+        <div *ngIf="loginForm.controls.password.dirty||loginForm.controls.password.touched">
+          <p class="loginFormErrors" *ngIf="loginForm.get('password').hasError('required')">Password is required</p>
+        </div>
       </mat-form-field>
       <button [disabled]="formData.invalid" mat-raised-button color="accent" type="submit">Login</button>
 
