--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -114,7 +114,39 @@ mat-card-subtitle {
   }
 
 .nullBlock{
-  border: 2px solid;
+  border: 0px;
   width: 200px;
   height: 200px;
+}
+
+
+/* ------------------ */
+.userInformation{
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 0px;
+  margin-top: 30px;
+  width: 50vw;
+}
+.userInformation mat-card-title{
+  font-family: Libre Baskerville;
+  font-size: 24px;
+}
+
+span{
+  font-family: Bruno Ace;
+  color: #d94621;
+  font-weight: bold;
+  font-size: xx-large;
+}
+
+.userInformation mat-card{
+  margin-top: 2px;
+}
+.userInformationHeader{
+  margin-top: 0px;
+  margin-bottom:0px;
+  padding: 0px;
 }
